Order details are done

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,16 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    //referenc to the root of the project
+    "baseUrl": "./src",
+    //define a alias paths
+    "paths": {
+      //tell the complier if the started with shared, then replace with array
+      "shared/*": [
+        "app/shared/*"
+      ]
+    }
   }
 }
+
