--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "core-js": "^2.4.1",
     "firebase": "^4.2.0",
     "firebase-tools": "^3.17.4",
+    "font-awesome": "^4.7.0",
     "g": "^2.0.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
